--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -6,7 +6,7 @@
 body {
   font-family: var(--font-ibm-plex-mono), sans-serif;
 }
-h1, h2 {
+h1, h2, h3 {
   font-family: var(--font-robert-trial-medium), sans-serif;
 }
 button {
