--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -15,6 +15,7 @@ h3 {
 h2 {
   font-size: 80px;
   font-weight: 500;
+  line-height: 72px;
 }
 
 h3 {
@@ -31,7 +32,11 @@ button {
 }
 
 @media (max-width: 768px) {
+  body{
+    font-size: 18px;
+  }
   h2 {
     font-size: 40px;
+    line-height: 36px;
   }
 }
