--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -5,6 +5,8 @@
 body {
   font-family: var(--font-ibm-plex-mono), sans-serif;
   font-size: 24px;
+  line-height: 32px;
+  color: #101114;
 }
 h1,
 h2,
@@ -31,12 +33,29 @@ button {
   }
 }
 
+@media (max-width: 1024px) {
+  body{
+    font-size: 20px;
+    line-height: 26px;
+  }
+  h2 {
+    font-size: 60px;
+    line-height: 54px;
+  }
+  h3 {
+    font-size: 32px;
+  }
+}
 @media (max-width: 768px) {
   body{
     font-size: 18px;
+    line-height: 24px;
   }
   h2 {
-    font-size: 40px;
-    line-height: 36px;
+    font-size: 44px;
+    line-height: 38px;
+  }
+  h3 {
+    font-size: 28px;
   }
 }
