--- a/src/app/styles/colorHover.css
+++ b/src/app/styles/colorHover.css
@@ -1,3 +1,27 @@
+@keyframes changeColor {
+  0% {
+      fill: #BBD4FF;
+  }
+  50% {
+      fill: #AFEDFF;
+  }
+  100% {
+      fill: #BBD4FF;
+  }
+}
+
+.svg-icon {
+  stroke: black;
+}
+
+.svg-icon:hover path {
+  animation: changeColor 2s;
+  animation-timing-function: ease-in;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+
+}
+
 .hover-blue:hover {
   background-color: #bbd4ff;
 }
