--- a/src/app/styles/brandSlider.css
+++ b/src/app/styles/brandSlider.css
@@ -1,9 +1,10 @@
 
 
     .scrollbar-none {
-      scrollbar-width: none; /* Firefox */
+      scrollbar-width: none; 
+     
     }
     .scrollbar-none::-webkit-scrollbar {
-      display: none; /* Safari and Chrome */
+      display: none;
     }
  
