--- a/src/app/styles/colorHover.css
+++ b/src/app/styles/colorHover.css
@@ -1,25 +1,17 @@
-@keyframes changeColor {
-  0% {
-      fill: #BBD4FF;
-  }
-  50% {
-      fill: #AFEDFF;
-  }
-  100% {
-      fill: #BBD4FF;
-  }
-}
 
 .svg-icon {
-  stroke: black;
+  background-image: url("/images/logoFooter.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  transition: background-image 0.5s ease;
+}
+.svg-icon.disabled {
+  background-image: url("/images/logoFooterOrange.svg");
 }
 
-.svg-icon:hover path {
-  animation: changeColor 2s;
-  animation-timing-function: ease-in;
-  animation-iteration-count: infinite;
-  animation-play-state: running;
-
+.svg-icon:hover {
+  background-image: url("/images/logoFooterGradient.svg");
 }
 
 .hover-blue:hover {
