--- a/src/app/styles/brandSlider.css
+++ b/src/app/styles/brandSlider.css
@@ -1,10 +1,11 @@
+.slider-container {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
 
-
-    .scrollbar-none {
-      scrollbar-width: none; 
-     
-    }
-    .scrollbar-none::-webkit-scrollbar {
-      display: none;
-    }
- 
+.slider-container .flex {
+  display: flex;
+  white-space: nowrap;
+}
