--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -13,11 +13,11 @@ h1,
 h2,
 h3 {
   font-family: var(--font-robert-trial-medium), sans-serif;
+  font-weight: 500;
 }
 
 h2 {
   font-size: 80px;
-  font-weight: 500;
   line-height: 72px;
 }
 
@@ -28,6 +28,10 @@ h3 {
 button {
   cursor: pointer;
 }
+.label-text{
+  font-size: 14px;
+  line-height: 20px;
+}
 
 @layer utilities {
   .text-balance {
@@ -35,32 +39,76 @@ button {
   }
 }
 
-@media (max-width: 1024px) {
-  body{
-    font-size: 20px;
-    line-height: 26px;
-  }
-  h2 {
-    font-size: 60px;
-    line-height: 54px;
-  }
-  h3 {
-    font-size: 32px;
-    line-height: 40px;
-  }
-}
 
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   body{
-    font-size: 18px;
+    font-size: 16px;
     line-height: 24px;
   }
   h2 {
-    font-size: 44px;
-    line-height: 38px;
+    font-size: 52px;
+    line-height: 48px;
   }
   h3 {
     font-size: 28px;
-    line-height: 32px;
+    line-height: 34px;
+  }
+  .label-text{
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+@media (max-width: 1024px) {
+  body{
+    font-size: 12px;
+    line-height: 18px;
+  }
+  h2 {
+    font-size: 39px;
+    line-height: 36px;
+  }
+  h3 {
+    font-size: 21px;
+    line-height: 27px;
+  }
+  .label-text{
+    font-size: 9px;
+    line-height: 12px;
+  }
+}
+@media (max-width: 768px) {
+  body{
+    font-size: 16px;
+    line-height: 24px;
+  }
+  h2 {
+    font-size: 28px;
+    line-height: 28px;
+  }
+  h3 {
+    font-size: 22px;
+    line-height: 30px;
+  }
+  .label-text{
+    font-size: 10px;
+    line-height: 12px;
+  }
+}
+@media (max-width: 430px) {
+  body{
+    font-size: 12.65px;
+    line-height: 18.98px;
+  }
+  h2 {
+    font-size: 22.14px;
+    line-height: 22.14px;
+  }
+  h3 {
+    font-size: 17/4px;
+    line-height: 23.72px;
+  }
+  .label-text{
+    font-size: 7.91px;
+    line-height: 9.49px;
   }
 }
