--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -32,6 +32,11 @@ button {
   font-size: 14px;
   line-height: 20px;
 }
+.btn{
+  font-size: 16px;
+  line-height: 24px;
+  font-family: var(--font-ibm-plex-mono);
+}
 
 @layer utilities {
   .text-balance {
@@ -57,6 +62,10 @@ button {
     font-size: 12px;
     line-height: 16px;
   }
+  .btn{
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
 @media (max-width: 1024px) {
   body{
@@ -72,6 +81,10 @@ button {
     line-height: 27px;
   }
   .label-text{
+    font-size: 9px;
+    line-height: 12px;
+  }
+  .btn{
     font-size: 9px;
     line-height: 12px;
   }
@@ -93,6 +106,10 @@ button {
     font-size: 10px;
     line-height: 12px;
   }
+  .btn{
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
 @media (max-width: 430px) {
   body{
@@ -104,11 +121,15 @@ button {
     line-height: 22.14px;
   }
   h3 {
-    font-size: 17/4px;
+    font-size: 17.4px;
     line-height: 23.72px;
   }
   .label-text{
     font-size: 7.91px;
     line-height: 9.49px;
+  }
+  .btn{
+    font-size: 12.65px;
+    line-height: 12.65px;
   }
 }
