--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -6,7 +6,7 @@ body {
   font-family: var(--font-ibm-plex-mono), sans-serif;
   font-size: 24px;
   line-height: 32px;
-  color: #101114;
+  color: rgba(16, 17, 20, 1);
   overflow-x: hidden
 }
 h1,
